--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"db:migrate": "prisma migrate deploy",
 		"db:push": "prisma db push",
 		"db:studio": "prisma studio",
-		"dev": "next dev --turbo",
+		"dev": "node get-ip.js && next dev --turbo",
 		"postinstall": "prisma generate",
 		"preview": "next build && next start",
 		"start": "next start",
@@ -73,7 +73,8 @@
 		"tailwind-merge": "^3.1.0",
 		"tw-animate-css": "^1.2.5",
 		"vaul": "^1.1.2",
-		"zod": "^3.24.2"
+		"zod": "^3.24.2",
+		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
